[Feat] Translations update

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,5 +1,6 @@
 {
-    "2020 - Present": "2020 - aktuell",
+    "(GitHub Actions, GitLab CI)": "",
+    "2022 - Present": "",
     "A reset link will be sent if the account exists.": "Ein Reset-Link wird gesendet, wenn das Konto existiert.",
     "API Design & Development": "API-Design & Entwicklung",
     "About me": "Über mich",
@@ -9,14 +10,12 @@
     "Back to all Categories": "Zurück zu allen Kategorien",
     "Back to all Tags": "Zurück zu allen Tags",
     "Back to all posts": "Zurück zu allen Beiträgen",
-    "Backend Development": "Backend-Entwicklung",
     "Best Practices": "Best Practices",
     "Blog - Technology and Programming Articles": "Blog - Technologische und Programmierungsartikel",
     "Blog Categories": "Blog-Kategorien",
     "Blog Posts": "Blog-Beiträge",
     "Blog Tags": "Blog-Tags",
     "Browse our collection of blog posts about technology, programming, and software development.": "Durchsuchen Sie unsere Sammlung von Blog-Beiträgen über Technologie, Programmierung und Softwareentwicklung.",
-    "CI\/CD (GitHub Actions, GitLab CI)": "CI\/CD (GitHub Actions, GitLab CI)",
     "CI\/CD pipelines, containerization": "CI\/CD-Pipelines, Containerisierung",
     "Cancel": "Abbrechen",
     "Categories": "Kategorien",
@@ -29,6 +28,7 @@
     "Comments": "Kommentare",
     "Contact Me": "Kontaktieren Sie mich",
     "Content": "Inhalt",
+    "Continuous Integration & Deployment": "",
     "Create Category": "Kategorie erstellen",
     "Create Post": "Beitrag erstellen",
     "Create Tag": "Tag erstellen",
@@ -43,22 +43,23 @@
     "Enter your email": "Geben Sie Ihre E-Mail ein",
     "Featured Articles": "Ausgewählte Artikel",
     "Forgot password?": "Passwort vergessen?",
+    "Fullstack Development": "",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Erhalten Sie Benachrichtigungen über neue Artikel und Ressourcen zur PHP-Entwicklung und DevOps-Praktiken",
     "Home": "Startseite",
     "I respect your privacy. Unsubscribe at any time": "Ich respektiere Ihre Privatsphäre. Sie können sich jederzeit abmelden",
-    "I'm a passionate PHP developer with experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Ich bin ein begeisterter PHP-Entwickler mit Erfahrung in Laravel und Symfony-Frameworks. Mit 3 Jahren beruflicher Erfahrung spezialisiere ich mich auf das Entwickeln robuster, skalierbarer Webanwendungen und das Implementieren von DevOps-Praktiken zur Optimierung des Entwicklungsweges.",
+    "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Ich bin ein begeisterter PHP-Entwickler mit 3 Jahren Berufserfahrung in Laravel und Symfony-Frameworks. Ich spezialisiere mich auf das Entwickeln robuster Webanwendungen und die Umsetzung von DevOps-Praktiken. Ich habe außerdem umfassende Erfahrung in moderner JavaScript-Entwicklung mit React und Vue.js, um responsive und interaktive Benutzeroberflächen zu erstellen.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "Javascript (React, Vue)": "",
     "Language": "Sprache",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony Tipps, Muster und architektonische Einblicke",
     "Latest": "Neueste",
-    "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Führende Backend-Entwicklung mit Laravel und Implementierung von DevOps-Praktiken zur Optimierung des Entwicklungsweges.",
     "Leave a comment": "Kommentar hinterlassen",
     "Log in to your account": "Anmelden zu Ihrem Konto",
     "Log out": "Abmelden",
     "Manage Categories": "Kategorien verwalten",
     "Manage Posts": "Beiträge verwalten",
     "Manage Tags": "Tags verwalten",
-    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung und CI\/CD-Pipelines übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung.",
+    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung, CI\/CD-Pipelines und Frontend-Technologien übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung. Mein Full-Stack-Ansatz ermöglicht es mir, vollständige Lösungen von der Datenbank bis zur Benutzeroberfläche zu erstellen.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Nächster",
     "Next comments page": "Nächste Kommentarsseite",
@@ -87,6 +88,7 @@
     "Read more about": "Mehr über",
     "Read the Blog": "Blog lesen",
     "Redis": "Redis",
+    "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Verantwortlich für die Entwicklung und Wartung von Webanwendungen mit Laravel und React. Implementierung von DevOps-Praktiken einschließlich Docker-Containerisierung, CI/CD-Pipelines und automatisierter Tests. Leitung technischer Entscheidungen und Mentoring von Junior-Entwicklern. Optimierung der Anwendungsleistung und Sicherstellung der Codequalität durch Code-Reviews und Best Practices.",
     "Save Category": "Kategorie speichern",
     "Save Post": "Beitrag speichern",
     "Save Tag": "Tag speichern",
@@ -109,7 +111,7 @@
     "This action cannot be undone. This will permanently delete this category.": "Diese Aktion kann nicht rückgängig gemacht werden. Diese Kategorie wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this post.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieser Beitrag wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this tag.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieses Tag wird dauerhaft gelöscht.",
-    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Durch diesen Blog teile ich meine Erfahrungen, Best Practices und Einblicke in die PHP-Entwicklung und DevOps-Methoden. Ob Sie Anfänger oder erfahrener Entwickler sind, hoffe ich, dass Sie wertvolle Inhalte finden, die Ihnen bei Ihrer eigenen technischen Reise helfen.",
+    "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Durch diesen Blog teile ich meine Erfahrungen, Best Practices und Einblicke in die PHP-Entwicklung, JavaScript-Frameworks und DevOps-Methoden. Ob Sie Anfänger oder erfahrener Entwickler sind, hoffe ich, dass Sie wertvolle Inhalte finden, die Ihnen bei Ihrer eigenen technischen Reise helfen.",
     "Title": "Titel",
     "Title A-Z": "Titel A-Z",
     "Title Z-A": "Titel Z-A",
