--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
-    "2020 - Present": "2020 - Present",
+    "(GitHub Actions, GitLab CI)": "(GitHub Actions, GitLab CI)",
+    "2022 - Present": "2022 - Present",
     "A reset link will be sent if the account exists.": "A reset link will be sent if the account exists.",
     "API Design & Development": "API Design & Development",
     "About me": "About me",
@@ -9,14 +10,12 @@
     "Back to all Categories": "Back to all Categories",
     "Back to all Tags": "Back to all Tags",
     "Back to all posts": "Back to all posts",
-    "Backend Development": "Backend Development",
     "Best Practices": "Best Practices",
     "Blog - Technology and Programming Articles": "Blog - Technology and Programming Articles",
     "Blog Categories": "Blog Categories",
     "Blog Posts": "Blog Posts",
     "Blog Tags": "Blog Tags",
     "Browse our collection of blog posts about technology, programming, and software development.": "Browse our collection of blog posts about technology, programming, and software development.",
-    "CI\/CD (GitHub Actions, GitLab CI)": "CI\/CD (GitHub Actions, GitLab CI)",
     "CI\/CD pipelines, containerization": "CI\/CD pipelines, containerization",
     "Cancel": "Cancel",
     "Categories": "Categories",
@@ -29,6 +28,7 @@
     "Comments": "Comments",
     "Contact Me": "Contact Me",
     "Content": "Content",
+    "Continuous Integration & Deployment": "Continuous Integration & Deployment",
     "Create Category": "Create Category",
     "Create Post": "Create Post",
     "Create Tag": "Create Tag",
@@ -43,22 +43,23 @@
     "Enter your email": "Enter your email",
     "Featured Articles": "Featured Articles",
     "Forgot password?": "Forgot password?",
+    "Fullstack Development": "Fullstack Development",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
     "Home": "Home",
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
-    "I'm a passionate PHP developer with experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "I'm a passionate PHP developer with experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.",
+    "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "Javascript (React, Vue)": "Javascript (React, Vue)",
     "Language": "Language",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony tips, patterns, and architectural insights",
     "Latest": "Latest",
-    "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.",
     "Leave a comment": "Leave a comment",
     "Log in to your account": "Log in to your account",
     "Log out": "Log out",
     "Manage Categories": "Manage Categories",
     "Manage Posts": "Manage Posts",
     "Manage Tags": "Manage Tags",
-    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.",
+    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Next",
     "Next comments page": "Next comments page",
@@ -87,6 +88,7 @@
     "Read more about": "Read more about",
     "Read the Blog": "Read the Blog",
     "Redis": "Redis",
+    "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.",
     "Save Category": "Save Category",
     "Save Post": "Save Post",
     "Save Tag": "Save Tag",
@@ -109,7 +111,7 @@
     "This action cannot be undone. This will permanently delete this category.": "This action cannot be undone. This will permanently delete this category.",
     "This action cannot be undone. This will permanently delete this post.": "This action cannot be undone. This will permanently delete this post.",
     "This action cannot be undone. This will permanently delete this tag.": "This action cannot be undone. This will permanently delete this tag.",
-    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.",
+    "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.",
     "Title": "Title",
     "Title A-Z": "Title A-Z",
     "Title Z-A": "Title Z-A",
