--- a/lang/pl.json
+++ b/lang/pl.json
@@ -1,5 +1,6 @@
 {
-    "2020 - Present": "2020 - obecnie",
+    "(GitHub Actions, GitLab CI)": "",
+    "2022 - Present": "",
     "A reset link will be sent if the account exists.": "Link do resetowania hasła zostanie wysłany, jeśli konto istnieje.",
     "API Design & Development": "Projektowanie i rozwój API",
     "About me": "O mnie",
@@ -9,14 +10,12 @@
     "Back to all Categories": "Wróć do wszystkich kategorii",
     "Back to all Tags": "Wróć do wszystkich tagów",
     "Back to all posts": "Wróć do wszystkich postów",
-    "Backend Development": "Programowanie backendu",
     "Best Practices": "Najlepsze praktyki",
     "Blog - Technology and Programming Articles": "Blog - Artykuły technologiczne i programistyczne",
     "Blog Categories": "Kategorie bloga",
     "Blog Posts": "Posty na blogu",
     "Blog Tags": "Tagi bloga",
     "Browse our collection of blog posts about technology, programming, and software development.": "Przeglądaj naszą kolekcję artykułów technologicznych i programistycznych dotyczących technologii, programowania i rozwoju oprogramowania.",
-    "CI\/CD (GitHub Actions, GitLab CI)": "CI\/CD (GitHub Actions, GitLab CI)",
     "CI\/CD pipelines, containerization": "Pipelines CI\/CD, konteneryzacja",
     "Cancel": "Anuluj",
     "Categories": "Kategorie",
@@ -29,6 +28,7 @@
     "Comments": "Komentarze",
     "Contact Me": "Skontaktuj się ze mną",
     "Content": "Treść",
+    "Continuous Integration & Deployment": "",
     "Create Category": "Stwórz kategorię",
     "Create Post": "Stwórz post",
     "Create Tag": "Stwórz tag",
@@ -43,22 +43,23 @@
     "Enter your email": "Wpisz swój email",
     "Featured Articles": "Artykuły wyróżnione",
     "Forgot password?": "Zapomniałeś hasła?",
+    "Fullstack Development": "",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Otrzymuj powiadomienia o nowych artykułach i zasobach dotyczących programowania w PHP i praktyk DevOps",
     "Home": "Strona główna",
     "I respect your privacy. Unsubscribe at any time": "Szanuję Twoją prywatność. Możesz zrezygnować w każdej chwili",
-    "I'm a passionate PHP developer with experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Jestem pasjonującym programistą PHP z bogatym doświadczeniem w frameworkach Laravel i Symfony. Z 3-letnim doświadczeniem w branży, specjalizuję się w budowaniu niezawodnych, skalowalnych aplikacji internetowych i implementacji praktyk DevOps w celu płynnego przepływu pracy",
+    "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Jestem pasjonującym programistą PHP z 3-letnim doświadczeniem w frameworkach Laravel i Symfony. Specjalizuję się w budowaniu niezawodnych aplikacji internetowych i implementacji praktyk DevOps. Mam również bogate doświadczenie w nowoczesnym programowaniu JavaScript, pracując z React i Vue.js do tworzenia responsywnych i interaktywnych interfejsów użytkownika.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "Javascript (React, Vue)": "",
     "Language": "Język",
     "Laravel & Symfony tips, patterns, and architectural insights": "Porady dotyczące Laravel i Symfony, wzorce i spostrzeżenia architektoniczne",
     "Latest": "Najnowsze",
-    "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Rozwój backendu z użyciem Laravel i implementacja praktyk DevOps w celu płynnego przepływu pracy",
     "Leave a comment": "Zostaw komentarz",
     "Log in to your account": "Zaloguj się do swojego konta",
     "Log out": "Wyloguj się",
     "Manage Categories": "Zarządzaj kategoriami",
     "Manage Posts": "Zarządzaj postami",
     "Manage Tags": "Zarządzaj tagami",
-    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie.",
+    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie. Moja podejście full-stack pozwala mi budować kompletne rozwiązania od bazy danych do interfejsu użytkownika.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Następna",
     "Next comments page": "Następna strona komentarzy",
@@ -87,6 +88,7 @@
     "Read more about": "Czytaj więcej o",
     "Read the Blog": "Czytaj bloga",
     "Redis": "Redis",
+    "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Rozwój i utrzymanie aplikacji webowych w Laravel i React. Implementacja praktyk DevOps, w tym konteneryzacji Docker, pipeline'ów CI/CD i testów automatycznych. Podejmowanie decyzji technicznych i mentoring młodszych programistów. Optymalizacja wydajności aplikacji i zapewnianie jakości kodu poprzez code review i najlepsze praktyki.",
     "Save Category": "Zapisz kategorię",
     "Save Post": "Zapisz post",
     "Save Tag": "Zapisz tag",
@@ -109,7 +111,7 @@
     "This action cannot be undone. This will permanently delete this category.": "Tej akcji nie można cofnąć. To trwale usunie tę kategorię.",
     "This action cannot be undone. This will permanently delete this post.": "Tej akcji nie można cofnąć. To trwale usunie ten post.",
     "This action cannot be undone. This will permanently delete this tag.": "Tej akcji nie można cofnąć. To trwale usunie ten tag.",
-    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Przez ten blog dzielę się swoimi doświadczeniami, najlepszymi praktykami i wglądem do programowania w PHP i praktyk DevOps. Niezależnie od tego, czy jesteś początkującym programistą, czy doświadczonym programistą, mam nadzieję, że znajdziesz wartościowe materiały, które pomogą Ci w swojej podróży technicznej.",
+    "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Przez ten blog dzielę się swoimi doświadczeniami, najlepszymi praktykami i wglądem do programowania w PHP, JavaScript i praktyk DevOps. Niezależnie od tego, czy jesteś początkującym programistą, czy doświadczonym programistą, mam nadzieję, że znajdziesz wartościowe materiały, które pomogą Ci w swojej podróży technicznej.",
     "Title": "Tytuł",
     "Title A-Z": "Tytuł A-Z",
     "Title Z-A": "Tytuł Z-A",
