[Feat] Update translations

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,6 +1,6 @@
 {
     "(GitHub Actions, GitLab CI)": "",
-    "2022 - Present": "",
+    "2022 - Present": "2022 - aktuell",
     "A reset link will be sent if the account exists.": "Ein Reset-Link wird gesendet, wenn das Konto existiert.",
     "API Design & Development": "API-Design & Entwicklung",
     "About me": "Über mich",
