--- a/lang/pl.json
+++ b/lang/pl.json
@@ -1,6 +1,6 @@
 {
     "(GitHub Actions, GitLab CI)": "",
-    "2022 - Present": "",
+    "2022 - Present": "2022 - obecnie",
     "A reset link will be sent if the account exists.": "Link do resetowania hasła zostanie wysłany, jeśli konto istnieje.",
     "API Design & Development": "Projektowanie i rozwój API",
     "About me": "O mnie",
@@ -80,7 +80,7 @@
     "Previous": "Poprzednia",
     "Previous comments page": "Poprzednia strona komentarzy",
     "Previous page": "Poprzednia strona",
-    "Professional Journey": "Profesjonalna podróż",
+    "Professional Journey": "Kariera profesjonalna",
     "Profile": "Profil",
     "Publish at": "Opublikuj",
     "Query Performance": "Wydajność zapytań",
